# journalclub

./: .pre-commit-config.yaml  README.md  main.py  pdf_parsing_and_embedding.py  pyproject.toml  requirements.txt  streamlit_main.py
.github/workflows/: ci.yaml  release.yaml
faiss/: index.pkl
journalclub/backend/: prediction.py  single_call.py
journalclub/frontend/: main.py
phosph/: index.faiss  index.pkl
script/: server
