[tool.poetry]
name = "journalclub"
version = "0.1.0"
description = ""
authors = ["Armand Sauzay <35524799+armand-sauzay@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.19.0"
streamlit-chat = "^0.0.2.1"
langchain = "^0.0.94"
openai = "^0.26.5"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
